2009-12-03  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Make it possible to disable calendar widgets for a particular web form (accessibility).

2009-12-03  Tomas Cerha  <cerha@brailcom.org>

	* db/db_pytis_cms.py:
	Pytis CMS: Minor docstring improvement.

2009-12-03  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/presentation/spec.py:
	Make the assertion message more informative.

2009-11-28  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/dialog.py:
	Make BugReport dialog a bit smaller vertically.
	
	This fixes button placement layout problems experienced in at least one
	environment when running wx2.8.  In other environments, including wx2.6, this
	change seems to have no impact on the layout, so it should be safe to apply.
	

2009-11-26  Milan Zamazal  <pdm@brailcom.org>

	* tools/dmp:
	Add `commit' command to tools/dmp.

2009-11-24  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/inputfield.py:
	* lib/pytis/presentation/field.py:
	* lib/pytis/presentation/spec.py:
	* lib/pytis/web/form.py:
	Allow setting a custom label (display) for enumeration field NULL value..

2009-11-20  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	genmenu: Make specification instances when necessary to determine bindings.

2009-11-19  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Handle bindings as a method in genmenu.

2009-11-19  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Add help texts to genmenu command line options.

2009-11-16  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/application.py:
	Prevent delayed crashes of non-DMP applications in Application._dynamic_menu.

2009-11-11  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/dbapi.py:
	Fix return values of db connection retry results.

2009-10-29  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix crash in pytis_update_rights_redundancy db function.

2009-10-28  Milan Zamazal  <pdm@brailcom.org>

	* tools/dmp: